--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-    "name": "p5",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack-dev-server --inline --hot",
-        "build": "webpack -p"
-    },
-    "license": "MIT",
-    "dependencies": {
-        "bootstrap": "4.0.0-alpha.6",
-        "knockout": "^3.4.1"
-    },
-    "devDependencies": {
-        "babel-core": "^6.22.1",
-        "babel-loader": "^6.2.10",
-        "babel-preset-es2015": "^6.22.0",
-        "css-loader": "^0.26.1",
-        "extract-loader": "^0.1.0",
-        "file-loader": "^0.10.0",
-        "html-loader": "^0.4.4",
-        "html-webpack-plugin": "^2.28.0",
-        "node-sass": "^4.5.0",
-        "sass-loader": "^5.0.0",
-        "style-loader": "^0.13.1",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.3.0"
-    }
+  "name": "p5",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --mode development --hot",
+    "build": "webpack -p"
+  },
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^4.1.1",
+    "knockout": "^3.5.0-beta"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "extract-loader": "^2.0.1",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.4"
+  }
 }
